--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -47,9 +47,18 @@
                 margin-bottom: 10px;
             }
 
-            &-steps {
+            &-list {
                 display: flex;
                 flex-direction: row;
+            }
+
+            &-element {
+                min-width: 400px;
+                min-height: 300px;
+            }
+
+            &-list.cdk-drop-list-dragging &-element:not(.cdk-drag-placeholder) {
+                transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
             }
         }
 
@@ -118,10 +127,18 @@
                                     margin-bottom: 10px;
                                 }
                     
-                                &-steps {
+                                &-list {
                                     display: flex;
                                     flex-direction: row;
-                                    height: 300px;
+                                }
+
+                                &-element {
+                                    min-width: 400px;
+                                    min-height: 300px;
+                                }
+
+                                &-list.cdk-drop-list-dragging &-element:not(.cdk-drag-placeholder) {
+                                    transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
                                 }
                             }
 
@@ -129,9 +146,23 @@
                                 display: flex;
                                 flex-direction: column;
 
-                                &-inlineTasks {
+                                &-inline {
                                     display: flex;
                                     flex-direction: row;
+
+                                    &-list {
+                                        display: flex;
+                                        flex-direction: row;
+                                    }
+
+                                    &-element {
+                                        min-width: 400px;
+                                        min-height: 400px;
+                                    }
+
+                                    &-list.cdk-drop-list-dragging &-element:not(.cdk-drag-placeholder) {
+                                        transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+                                    }
                                 }
                             }
                         }
@@ -231,7 +262,7 @@
 
     &-zoom {
         position: fixed;
-        height: 110px;
+        height: 150px;
         right: 580px;
         bottom: 25px;
         display: flex;
@@ -243,6 +274,7 @@
         button {
             width: 45px;
             height: 45px;
+            font-weight: bold;
 
             mat-icon {
                 transform: scale(1.2);
@@ -343,6 +375,18 @@
     .mat-icon-no-color {
         color: black;
     }
+}
+
+.cdk-drag-placeholder {
+    opacity: 0;
+}
+
+.cdk-drag-animating {
+    transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+}
+
+.cdk-drag-preview {
+    opacity: 0.7;
 }
 
 ::ng-deep .mat-menu-item {
