--- a/src/app/pieces/game-characters/game-characters.component.html
+++ b/src/app/pieces/game-characters/game-characters.component.html
@@ -24,9 +24,19 @@
                     <label for="description">{{'char_description_label' | translate}}</label>
                     <textarea class="background" name="description" [(ngModel)]="newCharacter.description" (change)="editTrace($event,'newCharacter_description')"></textarea>
                 </div>
-                <div class="piece-form-character-create-infos-phone" *ngIf="unityService.unity_isActive">
+                <div class="piece-form-character-create-infos-phone">
                     <label for="tel">{{'char_phone_label' | translate}}</label>
-                    <input name="tel" type="tel" [(ngModel)]="newCharacter.tel" (change)="editTrace($event, 'newCharacter_tel')"/>
+                    <input name="tel" type="tel" [(ngModel)]="newCharacter.tel" (change)="editTrace($event, 'newCharacter_tel')" (change)="newCharacter.tel == '' ? newCharacter.reachableByPhone = false : ''"/>
+                </div>
+                <div class="piece-form-character-create-infos-contact">
+                    <div class="piece-form-character-create-infos-contact-checkbox">
+                        <input type="checkbox" [(ngModel)]="newCharacter.physicalPresence" (change)="checkboxTrace($event, 'newCharacter_physicalPresence')"/>
+                        <label>{{'char_contact_physically_label' | translate}}</label>
+                    </div>
+                    <div class="piece-form-character-create-infos-contact-checkbox">
+                        <input type="checkbox" [disabled]="newCharacter.tel == ''" [(ngModel)]="newCharacter.reachableByPhone" (change)="checkboxTrace($event, 'newCharacter_reachableByPhone')"/>
+                        <label>{{'char_contact_reachableByPhone_label' | translate}}</label>
+                    </div>
                 </div>
                 <div class="piece-form-character-create-infos-color">
                     <label for="color">{{'char_color_label' | translate}}</label>
@@ -52,10 +62,19 @@
                         <label for="description">{{'char_description_label' | translate}}</label>
                         <textarea name="description" [(ngModel)]="character.description" (change)="editTrace($event,'Character_['+index+']_description')"></textarea>
                     </div>
-                    <div class="piece-form-character-create-infos-phone" *ngIf="unityService.unity_isActive">
+                    <div class="piece-form-character-create-infos-phone">
                         <label for="tel">{{'char_phone_label' | translate}}</label>
-                        <input name="tel" type="tel" [(ngModel)]="character.tel" (change)="editTrace($event, 'Character_['+index+']_tel')"/>
+                        <input name="tel" type="tel" [(ngModel)]="character.tel" (change)="editTrace($event, 'Character_['+index+']_tel')" (change)="character.tel == '' ? changeReachableByPhoneTo(character, false) : ''"/>
                     </div>
+                    <div class="piece-form-character-create-infos-contact">
+                        <div class="piece-form-character-create-infos-contact-checkbox">
+                            <input type="checkbox" [(ngModel)]="character.physicalPresence" (change)="checkboxTrace($event, 'Character_['+index+']_physicalPresence')"/>
+                            <label>{{'char_contact_physically_label' | translate}}</label>
+                        </div>
+                        <div class="piece-form-character-create-infos-contact-checkbox">
+                            <input type="checkbox" [disabled]="character.tel == ''" [checked]="character.reachableByPhone" (change)="checkboxTrace($event, 'Character_['+index+']_reachableByPhone'); changeReachableByPhoneTo(character, !character.reachableByPhone)"/>
+                            <label>{{'char_contact_reachableByPhone_label' | translate}}</label>
+                        </div>
                     <div class="piece-form-character-create-infos-color">
                         <label for="color">{{'char_color_label' | translate}}</label>
                         <input name="color" type="color" [(ngModel)]="character.color" (change)="editTrace($event,'Character_['+index+']_color')"/>
