--- a/src/app/sider-pieces/characters/characters.component.scss
+++ b/src/app/sider-pieces/characters/characters.component.scss
@@ -100,6 +100,10 @@
                     display: flex;
                     margin-top: 5px;
                     justify-content: space-between;
+
+                    input[type="tel"] {
+                        width: 75%;
+                    }
                 }
 
                 &-title {
@@ -110,6 +114,21 @@
 
                 &-color {
                     margin-top: 5px;
+                }
+
+                &-contact {
+                    margin-top: 5px;
+
+                    &-checkbox {
+                        
+                        label {
+                            margin-left: 5px;
+                        }
+
+                        input {
+                            transform: scale(1.2);
+                        }
+                    }
                 }
             }
         }
