--- a/src/app/sider-pieces/rewards/rewards.component.html
+++ b/src/app/sider-pieces/rewards/rewards.component.html
@@ -73,7 +73,7 @@ matTooltipPosition="before" [matTooltipDisabled]="!tooltipService.activatedToolt
                 <div class="piece-form-content-character" *ngIf="reward.type == 'character'">
                     <select name="character" [(ngModel)]="getCharacterReward(rewardIndex).character" (change)="editTrace($event, 'Reward_['+rewardIndex+']_character')">
                         <option value="null" selected disabled>{{'rewards_character_placeholder' | translate}}</option>
-                        <option *ngFor="let character of scenario.characters" [ngValue]="character">{{character.name}}</option>
+                        <option *ngFor="let character of scenario.characters" [ngValue]="character" [disabled]="!character.reachableByPhone">{{character.name}}</option>
                     </select>
                 </div>
                 <div class="piece-form-content-skill" *ngIf="reward.type == 'skill'">
