--- a/src/app/pieces/step/step.component.html
+++ b/src/app/pieces/step/step.component.html
@@ -6,7 +6,7 @@ matTooltipPosition="below" [matTooltipDisabled]="!tooltipService.activatedToolti
     <div class="piece-attach piece-attach-left"></div>
 
     <div class="piece-menu" [class]="displayMenu">
-        <mat-icon fontIcon="arrow_back_ios" (click)="moveStep('left'); editTrace($event,'Step_moveLeft')" *ngIf="index > 0"
+        <mat-icon fontIcon="arrow_back_ios" (click)="moveStep('left')" *ngIf="index > 0"
         [matTooltip]="translate.instant('moveLeft_tooltip')"
         matTooltipPosition="above" [matTooltipDisabled]="!tooltipService.activatedTooltips"></mat-icon>
         <mat-icon fontIcon="backspace" (click)="onClickErase()"
@@ -15,7 +15,7 @@ matTooltipPosition="below" [matTooltipDisabled]="!tooltipService.activatedToolti
         <mat-icon fontIcon="delete" (click)="onClickDelete()"
         [matTooltip]="translate.instant('deletePiece_tooltip')"
         matTooltipPosition="above" [matTooltipDisabled]="!tooltipService.activatedTooltips"></mat-icon>
-        <mat-icon fontIcon="arrow_forward_ios" (click)="moveStep('right'); editTrace($event,'Step_moveRight')"
+        <mat-icon fontIcon="arrow_forward_ios" (click)="moveStep('right')"
         [matTooltip]="translate.instant('moveRight_tooltip')"
         matTooltipPosition="above" [matTooltipDisabled]="!tooltipService.activatedTooltips"></mat-icon>
     </div>
