--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -213,8 +213,7 @@
         &-title {
             height: 45px;
             border-bottom: solid #8f8f8f 0.5px;
-            font-size: 20px;
-            width: 340px;
+            font-size: 18px;
             background-color: #e3e3e3;
             position: relative;
             z-index: 5;
@@ -223,6 +222,9 @@
             display: flex;
             align-items: center;
             justify-content: center;
+            padding-left: 25px;
+            text-align: center;
+            white-space: pre-wrap;
         }
 
         &-elements {
